Set value of always_show_context_menu_on_touch in WebSettings

Previous CL forgot to set the value of always_show_context_menu_on_touch.
This CL fixes that.

BUG=616971

Review-Url: https://codereview.chromium.org/2037923002
Cr-Commit-Position: refs/heads/master@{#397774}

Former-commit-id: 547e419023c4ee52ab8772464f1c678e0bbb9924